# password-manager

./: .gitignore  CMakeLists.txt
include/password_manager/: credentials.h  crypto.h  exceptions.h  manager.h  master.h  password_gen.h  password_manager.h  sodium_allocator.h  vault.h
src/: credentials.cpp  crypto.cpp  main.cpp  manager.cpp  master.cpp  password_gen.cpp  password_manager.cpp  vault.cpp
tests/: CMakeLists.txt  test_main.cpp  test_master.cpp  test_password_gen.cpp
